--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "react": "19.2.4",
+    "motion": "^12.31.0",
+    "react-dom": "19.2.4",
+    "next": "16.1.6"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "typescript": "^5.9.3",
+    "@types/node": "^25.2.0",
+    "@types/react": "^19.2.10",
+    "@types/react-dom": "^19.2.3",
+    "@tailwindcss/postcss": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "16.1.6",
     "prettier": "^3.6.2",
-    "prettier-plugin-tailwindcss": "^0.6.13",
-    "@eslint/eslintrc": "^3"
+    "prettier-plugin-tailwindcss": "^0.7.2",
+    "@eslint/eslintrc": "^3.3.3"
   }
 }
